--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "my-app",
-  "homepage": "http://pubgofficial.me/CodingNinja/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,12 +10,11 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
