--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.41.5",
+    "sawo": "^1.0.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
